# neuro-forge

./: .gitignore  e -i HEAD~1  model_dict.json  pyproject.toml  run_discord_bot.py  run_telegram_bot.py
bot/: COMPLETION_SUMMARY.md  DATA_FORMAT_FIXES.md  README.md  __init__.py  base_client.py  requirements.txt
bot/discord/: discord_bot.py
bot/telegram/: telegram_bot.py
config_templates/: conf.ZH.default.yaml  conf.default.yaml
doc/: PROACTIVE_CHAT.md
examples/: proactive_chat_demo.py
memory/: mem0test.py
src/open_llm_vtuber/: event_sources.py  proactive_manager.py  routes.py  websocket_handler.py
src/open_llm_vtuber/agent/: agent_factory.py
src/open_llm_vtuber/agent/agents/: advanced_memory_agent.py  mem0_llm.py
src/open_llm_vtuber/config_manager/: __init__.py  agent.py  discord_bot.py  main.py  telegram_bot.py  utils.py
tests/: test_proactive.py
