[project]
name = "open-llm-vtuber"
version = "1.1.4"
description = "Talk to any LLM with hands-free voice interaction, voice interruption, and Live2D taking face running locally across platforms"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "aiohappyeyeballs>=2.4.4",
    "aiohttp>=3.11.11",
    "aiosignal>=1.3.2",
    "annotated-types>=0.7.0",
    "anthropic>=0.43.0",
    "anyio>=4.8.0",
    "async-timeout>=5.0.1",
    "attrs>=24.3.0",
    "azure-cognitiveservices-speech>=1.42.0",
    "backoff>=2.2.1",
    "certifi>=2024.12.14",
    "cffi>=1.17.1",
    "cfgv>=3.4.0",
    "chardet>=5.2.0",
    "charset-normalizer>=3.4.1",
    "click>=8.1.8",
    "colorama>=0.4.6",
    "coloredlogs>=15.0.1",
    "comtypes>=1.4.9",
    "discord-py>=2.5.2",
    "distlib>=0.3.9",
    "distro>=1.9.0",
    "dnspython>=2.7.0",
    "edge-tts>=7.0.0",
    "email-validator>=2.2.0",
    "exceptiongroup>=1.2.2",
    "fastapi[standard]>=0.115.8",
    "fastapi-cli>=0.0.7",
    "ffmpeg-python>=0.2.0",
    "filelock>=3.17.0",
    "flatbuffers>=24.12.23",
    "frozenlist>=1.5.0",
    "fsspec>=2025.2.0",
    "future>=1.0.0",
    "git-filter-repo>=2.47.0",
    "greenlet>=3.2.3",
    "groq>=0.15.0",
    "grpcio>=1.73.0",
    "h11>=0.14.0",
    "h2>=4.2.0",
    "hpack>=4.1.0",
    "httpcore>=1.0.7",
    "httptools>=0.6.4",
    "httpx>=0.28.1",
    "humanfriendly>=10.0",
    "hyperframe>=6.1.0",
    "identify>=2.6.7",
    "idna>=3.10",
    "jinja2>=3.1.5",
    "jiter>=0.8.2",
    "langdetect>=1.0.9",
    "loguru>=0.7.2",
    "markdown-it-py>=3.0.0",
    "markupsafe>=3.0.2",
    "mdurl>=0.1.2",
    "mem0ai>=0.1.108",
    "mpmath>=1.3.0",
    "multidict>=6.1.0",
    "networkx>=3.4.2",
    "nodeenv>=1.9.1",
    "numpy>=1.26.4,<2",
    "onnxruntime>=1.20.1",
    "openai>=1.59.7",
    "packaging>=24.2",
    "pillow>=11.2.1",
    "platformdirs>=4.3.6",
    "portalocker>=2.10.1",
    "posthog>=5.1.0",
    "pre-commit>=4.1.0",
    "propcache>=0.2.1",
    "protobuf>=3.20.2",
    "pycparser>=2.22",
    "pydantic>=2.10.5",
    "pydantic-core>=2.27.2",
    "pydub>=0.25.1",
    "pygments>=2.19.1",
    "pypiwin32>=223",
    "pyreadline3>=3.5.4",
    "pysbd>=0.3.4",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "python-telegram-bot>=22.1",
    "pyttsx3>=2.98",
    "pytz>=2025.2",
    "pywin32>=308",
    "pyyaml>=6.0.2",
    "qdrant-client>=1.14.3",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "rich-toolkit>=0.13.2",
    "ruamel-yaml>=0.18.10",
    "ruamel-yaml-clib>=0.2.12",
    "ruff>=0.9.1",
    "scipy>=1.15.1",
    "shellingham>=1.5.4",
    "sherpa-onnx>=1.10.46",
    "silero-vad>=5.1.2",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "soundfile>=0.13.0",
    "sqlalchemy>=2.0.41",
    "srt>=3.5.3",
    "starlette>=0.45.3",
    "sympy>=1.13.1",
    "tabulate>=0.9.0",
    "tomli>=2.2.1",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "tqdm>=4.67.1",
    "typer>=0.15.1",
    "typing-extensions>=4.12.2",
    "urllib3>=2.3.0",
    "uvicorn[standard]>=0.34.0",
    "virtualenv>=20.29.2",
    "watchfiles>=1.0.4",
    "websocket-client>=1.8.0",
    "websockets>=14.1",
    "win32-setctime>=1.2.0",
    "yarl>=1.18.3",
    "feedparser>=6.0.11",
    "pyperclip>=1.9.0",
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64"]

[tool.pixi.pypi-dependencies]
open-llm-vtuber = { path = ".", editable = true }

[tool.pixi.dependencies]
cudnn = ">=8.0,<9"
cudatoolkit = ">=11.0,<12"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
